fix spacing for h2

--- a/styling.css
+++ b/styling.css
@@ -168,8 +168,7 @@ h2 {
     display: block;
     text-align: left;
     font-size: 40pt;
-    margin-left: auto;
-    margin-right: auto;
+    padding-left: 30px;
     padding-top: 15pt;
     margin-left: 50px;
     padding-bottom: 5pt;
